# django_member_system

./: .env  .gitignore  .pylintrc  README.md  docker-compose.yml  pyproject.toml
member_system/config/: settings.py  urls.py
member_system/users/: models.py  serializers.py  views.py
member_system/users/migrations/: 0001_initial.py
member_system/users/tests/: test_models.py
